--- a/video.html
+++ b/video.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh">
+<!--想要托管视频请发送到someten52@outlook.com,不要太大-->
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
