--- a/video.html
+++ b/video.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>视频托管页面</title>
 </head>
 <style>
     .c{color:#28c5ff}
