--- a/video.html
+++ b/video.html
@@ -10,6 +10,6 @@
 </style>
 <body>
     <h1 class="c">视频托管页面</h1>
-    .<a href="nbpl.mp4">你被骗了</a>
+    .<a href="https://fs-im-kefu.7moor-fs1.com/ly/4d2c3f00-7d4c-11e5-af15-41bf63ae4ea0/1711196367467/%E3%80%90%E5%AE%98%E6%96%B9%20MV%E3%80%91Never%20Gonna%20Give%20You%20Up%20-%20Rick%20Astley.mp3">你被骗了</a>
 </body>
 </html>
